--- a/docs/css/tokens/spacing.css
+++ b/docs/css/tokens/spacing.css
@@ -4,9 +4,55 @@
   /* ===================================== */
   --hit-box: 2.5rem;
 
-  --space-xs: 0.25rem;
-  --space-sm: 0.5rem;
-  --space-md: 1rem;
-  --space-lg: 1.5rem;
-  --space-xl: 2rem;
+  --space-xs: 0.75rem;
+  --space-sm: 875rem;
+  --space-md: 1.5rem;
+  --space-lg: 2rem;
+  --space-xl: 3rem;
+}
+
+@media (max-width: 1024px) {
+  :root {
+    --space-xs: 0.6255rem;
+    --space-sm: 0.75rem;
+    --space-md: 1.325rem;
+    --space-lg: 1.825rem;
+    --space-xl: 2.75rem;
+  }
+}
+@media (max-width: 1024px) {
+  :root {
+    --space-xs: 0.5rem;
+    --space-sm: 0.625rem;
+    --space-md: 1.25rem;
+    --space-lg: 1.75rem;
+    --space-xl: 2.5rem;
+  }
+}
+@media (max-width: 880px) {
+  :root {
+    --space-xs: 0.325rem;
+    --space-sm: 0.5rem;
+    --space-md: 1.125rem;
+    --space-lg: 1.5rem;
+    --space-xl: 2.25rem;
+  }
+}
+@media (max-width: 640px) {
+  :root {
+    --space-xs: 0.25rem;
+    --space-sm: 0.325rem;
+    --space-md: 1rem;
+    --space-lg: 1.25rem;
+    --space-xl: 2rem;
+  }
+}
+@media (max-width: 468px) {
+  :root {
+    --space-xs: 0.125rem;
+    --space-sm: 0.25rem;
+    --space-md: 1rem;
+    --space-lg: 1.125rem;
+    --space-xl: 1.75rem;
+  }
 }
